15. Updated Manga Description as per VD

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -43,6 +43,9 @@
             <argument
                 android:name="manga"
                 app:argType="com.example.pupilmesh.data.Manga" />
+            <action
+                android:id="@+id/action_mangaDescriptionFragment_to_navigation_face"
+                app:destination="@id/navigation_face" />
         </fragment>
     </navigation>
 </navigation>
